--- a/app/src/main/res/layout/match_group_card.xml
+++ b/app/src/main/res/layout/match_group_card.xml
@@ -1,71 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- scroll view layout for each group card
+<!-- layout for each group card
 used to populate the cardStackView recycler -->
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="none"
         android:background="@color/app_background">
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
             <!-- linear layout holds the undo and more button -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="22dp"
-                android:layout_marginBottom="10dp"
-                android:gravity="end">
-                <ImageButton
-                    android:id="@+id/undo_btn"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:background="@drawable/undo"
-                    android:layout_marginEnd="8dp"
-                    android:fillColor="@color/black"
-                    android:contentDescription="@string/undo_button"/>
-                <ImageButton
-                    android:id="@+id/match_more_btn"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:background="@drawable/more_horiz"
-                    android:fillColor="@color/black"
-                    android:contentDescription="@string/match_group_card_more_button"/>
-            </LinearLayout>
-            <!-- card view that holds the card -->
+            <ImageButton
+                android:id="@+id/undo_btn"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:background="@drawable/undo"
+                android:layout_marginEnd="8dp"
+                android:fillColor="@color/black"
+                android:contentDescription="@string/undo_button"
+                android:layout_toStartOf="@id/match_more_btn"
+                android:layout_marginVertical="15dp"/>
+            <ImageButton
+                android:id="@+id/match_more_btn"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:background="@drawable/more_horiz"
+                android:fillColor="@color/black"
+                android:contentDescription="@string/match_group_card_more_button"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="15dp"
+                android:layout_marginVertical="15dp"/>
+            <!-- card view that holds the group info -->
             <androidx.cardview.widget.CardView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/group_info_card"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
-                android:layout_marginHorizontal="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="60dp"
+                android:layout_below="@id/undo_btn"
+                android:layout_marginHorizontal="7dp"
                 app:cardCornerRadius="4dp"
                 app:cardElevation="13dp"
                 app:cardBackgroundColor="@color/app_background">
-                <!-- card will use a base linear layout for a vertical displaying of content -->
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_height="wrap_content">
                     <!-- relative layout holds the group name and biscuits -->
                     <RelativeLayout
+                        android:id="@+id/group_info_container"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:paddingVertical="15dp"
+                        android:paddingVertical="14dp"
                         android:paddingHorizontal="20dp">
                         <TextView
                             android:id="@+id/group_name"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:theme="@style/page_title"
-                            android:layout_centerVertical="true"/>
+                            android:theme="@style/page_title" />
                         <TextView
                             android:id="@+id/biscuit_value"
                             android:layout_width="wrap_content"
@@ -90,62 +83,66 @@ used to populate the cardStackView recycler -->
                         android:adjustViewBounds="true"
                         android:scaleType="centerCrop"
                         android:src="@drawable/one_direction_photo"
-                        android:contentDescription="matching group card photo"/>
-                    <!-- a nested card view for the interest tags -->
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        app:cardBackgroundColor="@color/app_background"
-                        app:cardCornerRadius="4dp"
-                        app:cardElevation="15dp">
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-                            <!-- use flex box layout to align the dynamic interest tags -->
-                            <com.google.android.flexbox.FlexboxLayout
-                                xmlns:app="http://schemas.android.com/apk/res-auto"
-                                android:id="@+id/interest_tags"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:padding="15dp"
-                                app:flexWrap="wrap"
-                                app:justifyContent="center">
-                            </com.google.android.flexbox.FlexboxLayout>
-                            <!-- a nested card view for the about us description -->
-                            <androidx.cardview.widget.CardView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                app:cardBackgroundColor="@color/app_background"
-                                app:cardCornerRadius="4dp"
-                                app:cardElevation="15dp">
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="vertical"
-                                    android:paddingHorizontal="15dp"
-                                    android:paddingVertical="20dp">
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="match_parent"
-                                        android:text="@string/about_us"
-                                        android:textSize="22sp"
-                                        android:textStyle="bold"
-                                        android:paddingBottom="120dp"/>
-                                    <TextView
-                                        android:id="@+id/about_us_description"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="match_parent"
-                                        android:paddingTop="20dp"/>
-                                </LinearLayout>
-                            </androidx.cardview.widget.CardView>
-                        </LinearLayout>
-                    </androidx.cardview.widget.CardView>
+                        android:contentDescription="matching group card photo"
+                        android:layout_below="@id/group_info_container"/>
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+            <!-- a card view for the interest tags -->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/interest_tag_card"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_below="@id/group_info_card"
+                android:layout_marginHorizontal="7dp"
+                android:layout_marginTop="-4dp"
+                app:cardBackgroundColor="@color/app_background"
+                app:cardCornerRadius="4dp"
+                app:cardElevation="16dp">
+                <!-- use flex box layout to align the dynamic interest tags -->
+                <com.google.android.flexbox.FlexboxLayout
+                    android:id="@+id/interest_tags"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="20dp"
+                    app:flexWrap="wrap"
+                    app:justifyContent="center">
+                </com.google.android.flexbox.FlexboxLayout>
+            </androidx.cardview.widget.CardView>
+            <!-- card view for the about us description -->
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:id="@+id/about_us_container"
+                android:layout_below="@id/interest_tag_card"
+                android:layout_marginHorizontal="7dp"
+                android:layout_marginTop="-4dp"
+                app:cardBackgroundColor="@color/app_background"
+                app:cardCornerRadius="4dp"
+                app:cardElevation="18dp"
+                android:layout_marginBottom="60dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingHorizontal="15dp"
+                    android:paddingVertical="20dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="@string/about_us"
+                        android:textSize="22sp"
+                        android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/about_us_description"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:paddingTop="20dp"
+                        android:paddingBottom="200dp"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
-        </LinearLayout>
+        </RelativeLayout>
     </ScrollView>
     <!-- container for the accept and reject button -->
     <RelativeLayout
