--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,6 +23,19 @@
         <item name="android:textSize">28sp</item>
     </style>
 
+<!--    page heading-->
+    <style name="page_heading" parent="" >
+        <item name="android:fontFamily">@font/karla_bold</item>
+        <item name="android:textColor">#333333</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+<!--    page subheading-->
+    <style name="page_subheading" parent="" >
+        <item name="android:fontFamily">@font/karla</item>
+        <item name="android:textColor">#414743</item>
+        <item name="android:textSize">13sp</item>
+    </style>
 <!--    -->
     <style name="custom_button_view" parent="" >
         <item name="android:background">@color/app_background</item>
