--- a/app/src/main/res/layout/fragment_preferences.xml
+++ b/app/src/main/res/layout/fragment_preferences.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".PreferencesFragment"
     >
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -15,17 +15,18 @@
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/constraintLayout"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="30dp"
         android:layout_marginRight="10dp"
-
         android:backgroundTint="@color/app_background">
 
         <TextView
-            android:id="@+id/preferences_title"
+            android:id="@+id/tv_preferences_title"
             android:layout_width="208dp"
             android:layout_height="35dp"
             android:text="@string/preferences_title"
@@ -47,7 +48,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.99"
-            app:layout_constraintStart_toEndOf="@+id/preferences_title"
+            app:layout_constraintStart_toEndOf="@+id/tv_preferences_title"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
 
@@ -59,130 +60,222 @@
         android:layout_width="wrap_content"
         android:layout_height="1dp"
         android:background="@color/horizontal_line"
+        app:layout_constraintTop_toBottomOf="@id/constraintLayout"
+        app:layout_constraintEnd_toStartOf="parent"
         />
 
     <TextView
+        android:id="@+id/tv_general_info_title"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="50dp"
         android:layout_marginRight="20dp"
-        android:id="@+id/general_info"
+        app:layout_constraintTop_toBottomOf="@id/horizontal_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/general_info"
         android:textStyle="bold"
         android:textSize="17sp"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_age_range"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/tv_general_info_title"
+        app:layout_constraintStart_toStartOf="@id/tv_general_info_title"
+        app:layout_constraintEnd_toEndOf="@id/tv_general_info_title"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/round_corner"
+        android:padding="20dp">
+        <TextView
+            android:id="@+id/tv_age_range"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:text="@string/set_age"
+            android:textColor="@color/gray"
+            android:textStyle="bold"
+            android:layout_marginBottom="10dp"/>
+        <TextView
+            android:id="@+id/tv_age_selected"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/tv_age_range"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textColor="@color/gray"
+            android:textStyle="bold"
+            android:layout_marginBottom="10dp"
+            tools:text="18-24"/>
+        <com.google.android.material.slider.RangeSlider
+            android:id="@+id/rs_age"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@id/tv_age_range"
+            app:layout_constraintTop_toBottomOf="@id/tv_age_range"
+            android:stepSize="1"
+            android:valueFrom="18"
+            android:valueTo="100"
+            app:values="@array/rangeSliderValues"
+            />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
+        android:id="@+id/ll_location"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/cl_age_range"
+        app:layout_constraintStart_toStartOf="@id/cl_age_range"
         android:orientation="vertical"
         android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="15dp"
-
         android:background="@drawable/round_corner"
         android:padding="20dp">
     <TextView
-        android:id="@+id/set_age"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/set_age"
-        android:textColor="@color/gray"
-        android:textStyle="bold" />
-
-    <com.google.android.material.slider.RangeSlider
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:valueFrom="0"
-        android:valueTo="100"
-        android:value="18"
-        android:stepSize="1"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="15dp"
-        android:background="@drawable/round_corner"
-        android:padding="20dp">
-    <TextView
-
-        android:id="@+id/set_location"
+        android:id="@+id/tv_set_location"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/set_location"
         android:textColor="@color/gray"
         android:textStyle="bold"/>
 
-    <TextView
-        android:id="@+id/location"
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/location" />
+        <TextView
+            android:id="@+id/tv_location"
+            android:layout_marginTop="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/location" />
+
+
+
     </LinearLayout>
+    <Button
+        android:id="@+id/btn_current_location"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/ll_location"
+        app:layout_constraintStart_toStartOf="@id/ll_location"
+        app:layout_constraintEnd_toEndOf="@id/ll_location"
+        android:text="Select Current Location"
+
+        />
+
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/ll_distance"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/round_corner"
-        android:padding="20dp">
-    <TextView
+        android:orientation="vertical"
+        android:padding="20dp"
+        app:layout_constraintTop_toBottomOf="@id/btn_current_location"
+        app:layout_constraintStart_toStartOf="@+id/btn_current_location"
+        app:layout_constraintEnd_toEndOf="@+id/btn_current_location"
+        tools:layout_editor_absoluteX="16dp">
 
-        android:id="@+id/set_tags"
+    <TextView
+        android:id="@+id/max_distance"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/set_tags"
+        android:text="@string/max_distance"
         android:textColor="@color/gray"
         android:textStyle="bold" />
 
+    <com.google.android.material.slider.RangeSlider
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
+    </com.google.android.material.slider.RangeSlider>
     </LinearLayout>
-
-
     <TextView
+        android:id="@+id/tv_deal_breaker"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
-        android:id="@+id/deal_breaker"
+        app:layout_constraintTop_toBottomOf="@id/ll_distance"
+        app:layout_constraintStart_toStartOf="@id/ll_distance"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/deal_breaker"
         android:textStyle="bold"
         android:textSize="17sp"/>
-    <LinearLayout
-        android:layout_width="match_parent"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_deal_breakers"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="15dp"
-        android:background="@drawable/round_corner"
-        android:padding="20dp">
+        app:layout_constraintTop_toBottomOf="@id/tv_deal_breaker"
+        app:layout_constraintStart_toStartOf="@id/tv_deal_breaker"
+        android:layout_marginTop="20dp">
+
         <TextView
-            android:id="@+id/max_distance"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/max_distance"
-            android:textColor="@color/gray"
-            android:textStyle="bold" />
-        <com.google.android.material.slider.RangeSlider
+            android:id="@+id/group_tags"
+            android:layout_width="360dp"
+            android:layout_height="41dp"
+            android:layout_marginStart="25dp"
+            android:padding="10dp"
+            android:text="Tags:"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteY="0dp" />
+
+        <EditText
+            android:id="@+id/editText_add_tag"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="40dp"
+            android:ems="10"
+            android:hint="add tag"
+            android:background="@drawable/round_corner"
+            android:inputType="textPersonName"
+            android:padding="10dp"
+            app:layout_constraintStart_toEndOf="@+id/add_tag"
+            app:layout_constraintTop_toBottomOf="@+id/group_tags" />
 
-        </com.google.android.material.slider.RangeSlider>
-    </LinearLayout>
+        <Button
+            android:id="@+id/add_tag"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="60dp"
+            android:layout_height="40dp"
+            android:backgroundTint="#4E4035"
+            android:backgroundTintMode="add"
+            app:icon="@drawable/add_icon"
+            app:iconTint="#312B28"
+            app:layout_constraintStart_toStartOf="@+id/group_tags"
+            app:layout_constraintTop_toBottomOf="@+id/group_tags" />
 
-    <LinearLayout
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/tag_group_chip"
+
+            android:layout_width="357dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toEndOf="@+id/group_tags"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/add_tag"
+            app:layout_constraintTop_toBottomOf="@+id/add_tag">
+
+        </com.google.android.material.chip.ChipGroup>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/tv_gender_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/cl_deal_breakers"
+        app:layout_constraintStart_toStartOf="@id/cl_deal_breakers"
+        app:layout_constraintBottom_toTopOf="@id/ll_gender"
+        android:layout_marginTop="20dp"
+        android:textStyle="bold"
+        android:textSize="17sp"
+        android:text="Gender of Groups to Select"/>
+
+    <LinearLayout
+        android:id="@+id/ll_gender"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/tv_gender_title"
         android:orientation="vertical"
         android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"
@@ -197,45 +290,37 @@
             android:text="@string/gender"
             android:textColor="@color/gray"
             android:textStyle="bold"/>
-
         <RadioGroup
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
-
             <RadioButton
                 android:id="@+id/radioButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Male" />
-
             <RadioButton
                 android:id="@+id/radioButton2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Female" />
-
             <RadioButton
                 android:id="@+id/radioButton3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Both" />
+                android:text="All" />
         </RadioGroup>
-
-
-
-
     </LinearLayout>
-
     <Button
-        android:id="@+id/save_preferences_btn"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="20dp"
-        android:layout_width="match_parent"
+        android:id="@+id/btn_save_preferences"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/ll_gender"
+        app:layout_constraintStart_toStartOf="@+id/ll_gender"
+        app:layout_constraintEnd_toEndOf="@+id/ll_gender"
         android:text="@string/save_preferences_btn" />
 
 
-</LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
